--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,4 +1,12 @@
 {
+  "exclude": [
+    "node_modules",
+    "src/**/*.test.ts",
+    "dist"
+  ],
+  "include": [
+    "src/**/*.ts"
+  ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
