--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
     "express": "^4.21.2"
+  },
+  "engines": {
+    "node": ">=20.10.0"
   }
 }
