--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "rimraf": "^6.0.1",
@@ -19,6 +20,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
     "express": "^4.21.2"
