--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2"
   },
   "engines": {
     "node": ">=20.10.0"
