--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,2 +1,21 @@
 PORT=3000
 PUBLIC_PATH=public
+
+# configuración para nuestra base de datos mongo local
+MONGO_URL=mongodb://projectEcommerce:123456@localhost:27017 # esta sería la variable de entorno más importante porque es por la cual nos vamos a conectar a la base de datos que actualmente solo está en local. Para producción u otro ambiente solo se tendría que cambiar esta URL porque las demás son para trabajar en local
+MONGO_DB_NAME=EcommerceProject # se puede cambiar el nombre
+MONGO_USER=projectEcommerce # se puede cambiar el nombre
+MONGO_PASS=123456 # se puede cambiar la contraseña
+
+# configuración para nuestra base de datos postgres local
+POSTGRES_URL=postgresql://projectEcommerce:123456@localhost:5432/EcommerceProject # esta sería la variable de entorno más importante porque es por la cual nos vamos a conectar a la base de datos que actualmente solo está en local. Para producción u otro ambiente solo se tendría que cambiar esta URL porque las demás son para trabajar en local
+POSTGRES_DATABASE_NAME=EcommerceProject # se puede cambiar el nombre
+POSTGRES_PORT=5432
+POSTGRES_USER=projectEcommerce # se puede cambiar el nombre
+POSTGRES_PASSWORD=123456 # se puede cambiar la contraseña
+
+# cuando se usa Express, aquí se recomienda que cuando se pase a producción, este "development" pase a "production" porque eso también ayuda a mejorar algunas configuraciones automáticas
+NODE_ENV=development
+
+# la semilla o seed para poder firmar nuestros tokens lo cual es muy importante y si se compromete o se ve afectada, entonces tenemos que cambiarla porque significa que cualquier persona que conozca la semilla o seed, puede generar tokens firmados como si hubiera sido nuestro backend. Esto vamos a usar para poder generar y firmar los tokens y esa misma semilla es la que se usará para verificar si esta misma semilla está presente en el token
+JWT_SEED=CualquierCosaQueQueremosColocarPeroDeFormaSegura
