--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
