--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
+    "@types/uuid": "^10.0.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
@@ -30,7 +31,8 @@
     "env-var": "^7.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "uuid": "^11.0.3"
   },
   "engines": {
     "node": ">=20.10.0"
