--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
     "@types/uuid": "^10.0.0",
     "rimraf": "^6.0.1",
@@ -32,6 +33,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.3"
   },
   "engines": {
